@@ -3,3 +3,6 @@ test-ext-inheritance_diagram
 ============================
 
 .. inheritance-diagram:: test.Foo
+
+.. inheritance-diagram:: test.Foo
+   :caption: Test Foo!
